--- a/ucasthesis.cfg
+++ b/ucasthesis.cfg
@@ -49,6 +49,8 @@
 \newcommand\scontentsname{目录}
 \renewcommand\listfigurename{图目录}
 \renewcommand\listtablename{表目录}
+\newcommand\listalgorithmname{算法索引}
+\newcommand\algorithmname{算法}
 \newcommand\listequationname{公式索引}
 \newcommand\equationname{公式}
 \renewcommand\bibname{参考文献}
